Base64Decoder geändert
sun.misc durch java.util ersetzt.